fix z-index error on refresh

--- a/frontend/src/components/intermediary/inter_form.css
+++ b/frontend/src/components/intermediary/inter_form.css
@@ -30,7 +30,7 @@
 }
 
 .inter-form {
-    z-index: 3;
+    z-index: 10;
 }
 .btn-logo {
     color: rgb(2, 44, 2);
